--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:extension.createTestFile"
+    "onCommand:extension.createTestFile",
+    "onCommand:extension.findTestFile"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -18,6 +19,10 @@
       {
         "command": "extension.createTestFile",
         "title": "Create Test File"
+      },
+      {
+        "command": "extension.findTestFile",
+        "title": "Find Test File"
       }
     ],
     "menus": {
@@ -25,11 +30,18 @@
         {
           "command": "extension.createTestFile",
           "when": "!explorerResourceIsFolder"
+        },
+        {
+          "command": "extension.findTestFile",
+          "when": "!explorerResourceIsFolder"
         }
       ],
       "editor/title/context": [
         {
           "command": "extension.createTestFile"
+        },
+        {
+          "command": "extension.findTestFile"
         }
       ]
     },
