--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "vscode-create-test-file",
-  "displayName": "vscode-create-test-file",
-  "description": "Create empty test file with inferred location",
+  "displayName": "Create Test File",
+  "description": "Find or create empty test file with inferred location",
   "version": "0.0.1",
+  "publisher": "paul-mannino",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paul-mannino/vscode-create-test-file"
+  },
   "engines": {
     "vscode": "^1.35.0"
   },
