--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "type": "git",
     "url": "https://github.com/paul-mannino/vscode-create-test-file"
   },
+  "engines": {
+    "vscode": "^1.75.0"
+  },
   "categories": [
     "Other"
-  ],
-  "activationEvents": [
-    "onCommand:extension.createTestFile",
-    "onCommand:extension.findTestFile"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -95,11 +94,12 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test": "vscode-test"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.9.0",
+    "@types/vscode": "^1.95.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "tslint": "^6.1.3",
