--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
       "properties": {
         "createTestFile.nameTemplate": {
           "type": "string",
-          "default": "test_{filename}",
+          "default": "test_{filename}{extension}",
           "description": "Template for filename of created test files"
         },
         "createTestFile.pathMaps": {
@@ -80,7 +80,7 @@
               "properties": {
                 "createTestFile.nameTemplate": {
                   "type": "string",
-                  "default": "test_{filename}",
+                  "default": "test_{filename}{extension}",
                   "description": "Template for filename of created test files"
                 }
               }
@@ -92,17 +92,24 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "test": "vscode-test"
+    "compile": "tsc",
+    "watch": "tsc -watch",
+    "pretest": "npm run compile && mkdir -p tmp/test && cp -r src/test/sampleWorkspace tmp/test",
+    "test": "vscode-test",
+    "posttest": "rm -rf tmp/test",
+    "lint": "eslint src"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.9.0",
     "@types/vscode": "^1.95.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
-    "tslint": "^6.1.3",
-    "typescript": "^5.6.3"
+    "eslint": "^9.14.0",
+    "mocha": "^10.8.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
   }
 }
