--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "vscode-create-test-file",
   "displayName": "Create Test File",
   "description": "Find or create empty test file with inferred location",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "publisher": "paul-mannino",
+  "icon": "resources/logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/paul-mannino/vscode-create-test-file"
@@ -104,7 +105,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.9.0",
-    "@types/vscode": "^1.95.0",
+    "@types/vscode": "^1.75.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.14.0",
